--- a/backend/rappler_fax_checks.json
+++ b/backend/rappler_fax_checks.json
@@ -218,5 +218,15 @@
     "url": "https://www.rappler.com/newsbreak/fact-check/no-grade-13-school-year-2025-2026/",
     "title": "FACT CHECK: No Grade 13 for school year 2025-2026",
     "content": "CLAIM: The Department of Education (DepEd) will add another year, Grade 13, to its senior high school (SHS) curriculum for the school year 2025 to 2026.\nRATING: False\nWhy we fact-checked this: On Saturday, May 17, the Facebook page Education News shared a supposed announcement from the DepEd, stating that Grade 13 would be added to its SHS for the upcoming school year.\nThe social media card features the logos of the DepEd and the Commission on Higher Education to lend credibility to the announcement. As of Sunday, May 18, the post has gotten over 490 shares and has 80 reactions. \nMost parents and students who shared the supposed announcement expressed disappointment about the addition of one year to the country’s basic education.\n“Fake news ang kumakalat na Facebook post tungkol sa umanoy dagdag na Grade 13 sa Senior High School para sa SY 2025-2026,” the department said.  (The Facebook post circulating about the supposed addition of Grade 13 to Senior High School for SY 2025-2026 is fake news.)\nThe DepEd urged the public to get information from reputable and credible sources."
+  },
+  {
+    "url": "https://verafiles.org/articles/fact-check-deped-says-no-inclusion-of-grade-13-in-senior-high-school",
+    "title": "DepEd says NO inclusion of Grade 13 in senior high school",
+    "content": "A now-deleted viral graphic claiming that the Department of Education announced the addition of Grade 13 level to senior high school starting school year 2025–2026 has circulated online. This is fake."
+  },
+  {
+    "url": "https://www.onenews.ph/articles/fact-check-philippines-did-not-add-one-more-year-of-high-school",
+    "title": "Philippines Did Not Add One More Year Of High School",
+    "content": "The Philippines has not added one more year of high school for its students, according to the education department, contrary to false posts viewed millions of times on social media. No law has been passed amending the country's current basic education program as of Dec. 6."
   }
 ]
